added another set of lecture notes

--- a/section-2/2.1-detector-confidence.md
+++ b/section-2/2.1-detector-confidence.md
@@ -1,1 +1,24 @@
 # Detector Confidence
+
+##### Uses of detector confidence:
+* Give strong intervention (conf > ~.6)
+* Give no intervention (conf < ~.4)
+* Give 'fail-soft' intervention if confidence is between .4 and .6.A
+
+##### Discovery with models analyses:
+* When you use this model in further analyses
+* __Big Idea:__ Keep all of your information around to make the most informed decision.
+
+##### Types of confience:
+* Some models provide none or a "pseudoconfidence" 
+* Some give you a straightforward answer.
+* Others require you to parse it out of software output.
+* Confidence can be "lumpy", meaning that the confidence is "lumped" throughout different parts of the algorithm (e.g.tree and rule based classifiers).
+* 
+
+##### Risk Ratio:
+* A good way of analyzing the impact of specific predictors
+* Used with binary predictors: rr = (probability that a is 0)/(probability that a is 1)
+* You can turn a numerical predictors into a binary predictors with a threshold.
+* Provides a clear way to communicate the effects of a variable on your predicted outcome.
+
